commit a new projet

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
+<!DOCTYPE HTML>
+<html>  
 <body>
 
-<h1>This is a Heading</h1>
-
+<form action="welcome.php" method="post">
+Name: <input type="text" name="name"><br>
+E-mail: <input type="text" name="email"><br>
+<input type="submit">
+</form>
 
 </body>
 </html>
-
